// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksByTypeFilters no data available should render the no data available message 1`] = `
"<div class=\\"js-tasks-by-type-chart-filters d-flex flex-row justify-content-between align-items-center\\">
  <div class=\\"flex-column\\">
    <h4>Tasks by type</h4>
    <p>Showing Issues and 1 labels</p>
  </div>
  <div class=\\"flex-column\\">
    <glnewdropdown-stub headertext=\\"\\" text=\\"\\" category=\\"tertiary\\" variant=\\"default\\" size=\\"medium\\" icon=\\"settings\\" aria-expanded=\\"false\\" aria-label=\\"CycleAnalytics|Display chart filters\\" right=\\"\\">
      <div class=\\"js-tasks-by-type-chart-filters-subject mb-3 px-3\\">
        <p class=\\"font-weight-bold text-left mb-2\\">Show</p>
        <gl-segmented-control-stub checked=\\"Issue\\" options=\\"[object Object],[object Object]\\"></gl-segmented-control-stub>
      </div>
      <gl-dropdown-divider-stub></gl-dropdown-divider-stub>
      <div class=\\"js-tasks-by-type-chart-filters-labels mb-3 px-3\\">
        <p class=\\"font-weight-bold text-left my-2\\">
          Select labels
          <br> <small>1 selected (2 max)</small></p>
        <gl-search-box-by-type-stub value=\\"\\" class=\\"js-tasks-by-type-chart-filters-subject mb-2\\"></gl-search-box-by-type-stub>
        <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" ischecked=\\"true\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 0, 0);\\"></span>
          roses
        </glnewdropdownitem-stub>
        <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 255, 255);\\"></span>
          some space
        </glnewdropdownitem-stub>
        <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(0, 0, 255);\\"></span>
          violets
        </glnewdropdownitem-stub>
        <div class=\\"text-secondary\\" style=\\"display: none;\\">
          No matching labels
        </div>
      </div>
    </glnewdropdown-stub>
  </div>
</div>"
`;

exports[`TasksByTypeFilters with data available labels with label dropdown open renders the group labels as dropdown items 1`] = `
"<glnewdropdown-stub headertext=\\"\\" text=\\"\\" category=\\"tertiary\\" variant=\\"default\\" size=\\"medium\\" icon=\\"settings\\" aria-expanded=\\"false\\" aria-label=\\"CycleAnalytics|Display chart filters\\" right=\\"\\">
  <div class=\\"js-tasks-by-type-chart-filters-subject mb-3 px-3\\">
    <p class=\\"font-weight-bold text-left mb-2\\">Show</p>
    <gl-segmented-control-stub checked=\\"Issue\\" options=\\"[object Object],[object Object]\\"></gl-segmented-control-stub>
  </div>
  <gl-dropdown-divider-stub></gl-dropdown-divider-stub>
  <div class=\\"js-tasks-by-type-chart-filters-labels mb-3 px-3\\">
    <p class=\\"font-weight-bold text-left my-2\\">
      Select labels
      <br> <small>1 selected (2 max)</small></p>
    <gl-search-box-by-type-stub value=\\"\\" class=\\"js-tasks-by-type-chart-filters-subject mb-2\\"></gl-search-box-by-type-stub>
    <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" ischecked=\\"true\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 0, 0);\\"></span>
      roses
    </glnewdropdownitem-stub>
    <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 255, 255);\\"></span>
      some space
    </glnewdropdownitem-stub>
    <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(0, 0, 255);\\"></span>
      violets
    </glnewdropdownitem-stub>
    <div class=\\"text-secondary\\" style=\\"display: none;\\">
      No matching labels
    </div>
  </div>
</glnewdropdown-stub>"
`;

exports[`TasksByTypeFilters with data available should render the filters 1`] = `
"<div class=\\"js-tasks-by-type-chart-filters d-flex flex-row justify-content-between align-items-center\\">
  <div class=\\"flex-column\\">
    <h4>Tasks by type</h4>
    <p>Showing Issues and 1 labels</p>
  </div>
  <div class=\\"flex-column\\">
    <glnewdropdown-stub headertext=\\"\\" text=\\"\\" category=\\"tertiary\\" variant=\\"default\\" size=\\"medium\\" icon=\\"settings\\" aria-expanded=\\"false\\" aria-label=\\"CycleAnalytics|Display chart filters\\" right=\\"\\">
      <div class=\\"js-tasks-by-type-chart-filters-subject mb-3 px-3\\">
        <p class=\\"font-weight-bold text-left mb-2\\">Show</p>
        <gl-segmented-control-stub checked=\\"Issue\\" options=\\"[object Object],[object Object]\\"></gl-segmented-control-stub>
      </div>
      <gl-dropdown-divider-stub></gl-dropdown-divider-stub>
      <div class=\\"js-tasks-by-type-chart-filters-labels mb-3 px-3\\">
        <p class=\\"font-weight-bold text-left my-2\\">
          Select labels
          <br> <small>1 selected (2 max)</small></p>
        <gl-search-box-by-type-stub value=\\"\\" class=\\"js-tasks-by-type-chart-filters-subject mb-2\\"></gl-search-box-by-type-stub>
        <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" ischecked=\\"true\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 0, 0);\\"></span>
          roses
        </glnewdropdownitem-stub>
        <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(255, 255, 255);\\"></span>
          some space
        </glnewdropdownitem-stub>
        <glnewdropdownitem-stub avatarurl=\\"\\" iconcolor=\\"\\" iconname=\\"\\" iconrightname=\\"\\" secondarytext=\\"\\"><span class=\\"d-inline-block dropdown-label-box\\" style=\\"background-color: rgb(0, 0, 255);\\"></span>
          violets
        </glnewdropdownitem-stub>
        <div class=\\"text-secondary\\" style=\\"display: none;\\">
          No matching labels
        </div>
      </div>
    </glnewdropdown-stub>
  </div>
</div>"
`;

exports[`TasksByTypeFilters with data available subject has subject filters 1`] = `"<gl-segmented-control-stub checked=\\"Issue\\" options=\\"[object Object],[object Object]\\"></gl-segmented-control-stub>"`;
